# MCP-

./: .env.example  .gitignore  API_REFERENCE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  EXAMPLES.md  Makefile  README.md  agent_cli.py  orchestrator.py  pyproject.toml  pyproject.toml.claude-config  requirements.txt  run.py
.github/workflows/: claude-code-review.yml  claude.yml
docs/: README.md  integration-design-proposal.md  openmemory-integration-analysis.md
poc/: openmemory_integration.py  requirements.txt
src/: __init__.py  agents.py  claude_squad_helper.py  github_manager.py  health_monitor.py  main.py  models.py  orchestrator.py  server.py  tools.py
src/filesystem/: __init__.py  component.py
src/memory/: __init__.py  component.py
tests/: __init__.py  test_filesystem.py  test_memory.py
